<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/add_to_favorites"
            android:icon="@drawable/ic_add_favorites"
            android:title="@string/favotrites"
            android:iconifiedByDefault="false"
            app:showAsAction="ifRoom"/>

</menu>